--- a/project-btl-oop-master/src/main/resources/fxml/home.fxml
+++ b/project-btl-oop-master/src/main/resources/fxml/home.fxml
@@ -72,10 +72,22 @@
                                 </Button>
                                 <AnchorPane prefHeight="46.0" prefWidth="410.0">
                            <children>
-                              <Button fx:id="btnDung" layoutY="10.0" mnemonicParsing="false" onAction="#pauseMusic" text="Dừng" />
-                              <Button fx:id="btnTiepTuc" layoutX="60.0" layoutY="10.0" mnemonicParsing="false" onAction="#resumeMusic" text="Tiếp tục" />
-                              <Button fx:id="btnTatNhac" layoutX="137.0" layoutY="10.0" mnemonicParsing="false" onAction="#stopMusic" text="Tắt nhạc" />
-                              <Button fx:id="btnBatNhac" layoutX="205.0" layoutY="10.0" mnemonicParsing="false" onAction="#startMusic" text="Bật nhạc" />
+                              <Button fx:id="btnDung" layoutY="5.0" mnemonicParsing="false" onAction="#pauseMusic" prefHeight="36.0" prefWidth="70.0" styleClass="button1" text="Dừng">
+                                 <font>
+                                    <Font name="System Bold" size="12.0" />
+                                 </font></Button>
+                              <Button fx:id="btnTiepTuc" layoutX="80.0" layoutY="6.0" mnemonicParsing="false" onAction="#resumeMusic" prefHeight="35.0" prefWidth="81.0" styleClass="button1" text="Tiếp tục">
+                                 <font>
+                                    <Font name="System Bold" size="12.0" />
+                                 </font></Button>
+                              <Button fx:id="btnTatNhac" layoutX="169.0" layoutY="6.0" mnemonicParsing="false" onAction="#stopMusic" prefHeight="35.0" prefWidth="86.0" styleClass="button1" text="Tắt nhạc">
+                                 <font>
+                                    <Font name="System Bold" size="12.0" />
+                                 </font></Button>
+                              <Button fx:id="btnBatNhac" layoutX="262.0" layoutY="7.0" mnemonicParsing="false" onAction="#startMusic" prefHeight="34.0" prefWidth="86.0" styleClass="button1" text="Bật nhạc">
+                                 <font>
+                                    <Font name="System Bold" size="12.0" />
+                                 </font></Button>
                            </children></AnchorPane>
                                 <Button fx:id="dangXuatButton" mnemonicParsing="false" onAction="#onDangXuat" prefHeight="35.0" prefWidth="100.0" stylesheets="@../css/home.css" text="Đăng xuất">
                                     <cursor>
@@ -112,6 +124,7 @@
                                 <Cursor fx:constant="HAND" />
                             </cursor>
                         </Button>
+                  <Label fx:id="labelGioHang" layoutX="554.0" layoutY="236.0" textFill="#c2201d" />
                     </children>
                 </AnchorPane>
                 <AnchorPane prefHeight="400.0" prefWidth="1190.0" styleClass="ColorXanhDuongNhat" stylesheets="@../css/home.css" VBox.vgrow="ALWAYS">
