--- a/project-btl-oop-master/src/main/resources/fxml/Phone.fxml
+++ b/project-btl-oop-master/src/main/resources/fxml/Phone.fxml
@@ -40,6 +40,17 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                         </Button>
+                  <Button layoutX="825.0" layoutY="93.0" mnemonicParsing="false" onAction="#pauseMusic" styleClass="buttonQL" text="Dừng">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
+                  <Button layoutX="883.0" layoutY="93.0" mnemonicParsing="false" onAction="#resumeMusic" styleClass="buttonQL" text="Tiếp tục">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
+                  <Button layoutX="959.0" layoutY="93.0" mnemonicParsing="false" onAction="#stopMusic" styleClass="buttonSearch" text="Tắt nhạc" />
+                  <Button layoutX="1035.0" layoutY="93.0" mnemonicParsing="false" onAction="#startMusic" styleClass="buttonSearch" text="Bật nhạc" />
+                  <Label fx:id="labelGioHang" layoutX="600.0" layoutY="192.0" textFill="#ea0707" />
                     </children>
                 </AnchorPane>
                 <AnchorPane prefHeight="385.0" prefWidth="1000.0" styleClass="NenHienThiSanPham" stylesheets="@../css/quanAo.css" VBox.vgrow="ALWAYS">
