--- a/project-btl-oop-master/src/main/resources/fxml/gioHang.fxml
+++ b/project-btl-oop-master/src/main/resources/fxml/gioHang.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pj.Controller.GioHangController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pj.Controller.GioHangController">
     <top>
         <AnchorPane prefHeight="150.0" prefWidth="1200.0" styleClass="background1" stylesheets="@../css/gioHang.css" BorderPane.alignment="CENTER">
             <children>
@@ -63,6 +63,16 @@
                         <Cursor fx:constant="HAND" />
                     </cursor>
                 </Button>
+            <Button layoutX="798.0" layoutY="63.0" mnemonicParsing="false" onAction="#pauseMusic" prefHeight="26.0" prefWidth="54.0" styleClass="buttonSearch" text="Dừng">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+            <Button layoutX="859.0" layoutY="64.0" mnemonicParsing="false" onAction="#resumeMusic" prefHeight="25.0" prefWidth="64.0" styleClass="buttonSearch" text="Tiếp tục">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
+            <Button layoutX="935.0" layoutY="63.0" mnemonicParsing="false" onAction="#stopMusic" prefHeight="27.0" prefWidth="73.0" styleClass="buttonQL" text="Tắt nhạc" />
+            <Button layoutX="1021.0" layoutY="64.0" mnemonicParsing="false" onAction="#startMusic" styleClass="buttonQL" text="Bật nhạc" />
             </children>
         </AnchorPane>
     </top>
