--- a/project-btl-oop-master/src/main/resources/fxml/ckMaQR.fxml
+++ b/project-btl-oop-master/src/main/resources/fxml/ckMaQR.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="278.0" prefWidth="430.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pj.Controller.CKMaQRController">
+<AnchorPane prefHeight="278.0" prefWidth="430.0" styleClass="anchor-pane" stylesheets="@../css/ckMaQR.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pj.Controller.CKMaQRController">
     <children>
-        <ImageView fx:id="imageView" fitHeight="212.0" fitWidth="284.0" layoutX="74.0" pickOnBounds="true" preserveRatio="true" />
-        <Button fx:id="btnClose" layoutX="193.0" layoutY="230.0" mnemonicParsing="false" onAction="#closePopup" text="Close" />
+        <ImageView fx:id="imageView" fitHeight="230.0" fitWidth="273.0" layoutX="94.0" pickOnBounds="true" preserveRatio="true" />
+        <Button fx:id="btnClose" layoutX="166.0" layoutY="234.0" mnemonicParsing="false" onAction="#closePopup" stylesheets="@../css/ckMaQR.css" text="Close" />
     </children>
 </AnchorPane>
