--- a/project-btl-oop-master/src/main/resources/fxml/KhiieuNaiForm.fxml
+++ b/project-btl-oop-master/src/main/resources/fxml/KhiieuNaiForm.fxml
@@ -3,30 +3,74 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
-<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pj.Controller.KhiieuNaiFormController">
-    <VBox alignment="CENTER" prefHeight="680.0" prefWidth="528.0" spacing="10.0" styleClass="vbox" stylesheets="@../css/form.css">
-        <Button fx:id="quayLaiButton" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onButtonQuayLai" stylesheets="@../css/form.css" text="Quay lại" />
-
-        <Label stylesheets="@../css/form.css" text="Form Khiếu nại" />
-        <Label stylesheets="@../css/form.css" text="Họ và tên" />
-        <TextField fx:id="txtHoTen" styleClass="text-field" stylesheets="@../css/form.css" />
-        <Label stylesheets="@../css/form.css" text="Nội dung khiếu nại" />
-        <TextArea fx:id="txtNoiDung" styleClass="text-area" stylesheets="@../css/form.css" />
-        <Label stylesheets="@../css/form.css" text="Chọn file đính kèm" />
-        <Button onAction="#selectFile" style="-fx-background-color: green;" stylesheets="@../css/form.css" text="Chọn file" />
-        <Label stylesheets="@../css/form.css" text="ID Đơn hàng" />
-        <TextField fx:id="txtDonHangID" styleClass="text-field" stylesheets="@../css/form.css" />
-        <Label stylesheets="@../css/form.css" text="Email" />
-        <TextField fx:id="txtEmail" styleClass="text-field" stylesheets="@../css/form.css" />
-        <Label stylesheets="@../css/form.css" text="Lựa chọn thắc mắc" />
-        <ComboBox fx:id="cmbThacMac" styleClass="combo-box" stylesheets="@../css/form.css" />
-        <Button onAction="#submitKhiieuNai" style="-fx-background-color: orange;" stylesheets="@../css/form.css" text="Gửi khiếu nại" />
+<?import javafx.scene.text.Font?>
 
 
-    </VBox>
-</AnchorPane>
+<BorderPane  fx:controller="com.example.pj.Controller.KhiieuNaiFormController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="758.0" prefWidth="1033.0" styleClass="background1" stylesheets="@../css/gioHang.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <AnchorPane prefHeight="60.0" prefWidth="1034.0" styleClass="background3" BorderPane.alignment="CENTER">
+         <children>
+            <HBox layoutX="14.0" layoutY="2.0" prefHeight="78.0" prefWidth="209.0">
+               <children>
+                  <ImageView fitHeight="73.0" fitWidth="79.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../image/home/avatar.png" />
+                     </image>
+                  </ImageView>
+                  <Label prefHeight="72.0" prefWidth="158.0" stylesheets="@../css/gioHang.css" text="KHIẾU NẠI">
+                     <font>
+                        <Font name="System Bold" size="24.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <Button fx:id="quayLaiButton" layoutX="853.0" layoutY="26.0" mnemonicParsing="false" onAction="#onButtonQuayLai" styleClass="buttonQL" stylesheets="@../css/form.css" text="Quay lại">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
+   </top>
+   <center>
+      <ScrollPane prefHeight="678.0" prefWidth="1034.0" BorderPane.alignment="CENTER">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="703.0" prefWidth="1030.0" styleClass="background2" stylesheets="@../css/gioHang.css">
+               <children>
+                  <AnchorPane prefHeight="400.0" prefWidth="400.0">
+                     <children>
+                        <VBox alignment="CENTER" layoutX="210.0" prefHeight="661.0" prefWidth="607.0" spacing="10.0" styleClass="vbox" stylesheets="@../css/form.css">
+                           <children>
+                              <Label stylesheets="@../css/form.css" text="Form Khiếu nại" />
+                              <Label stylesheets="@../css/form.css" text="Họ và tên" />
+                              <TextField fx:id="txtHoTen" styleClass="text-field" stylesheets="@../css/form.css" />
+                              <Label stylesheets="@../css/form.css" text="Nội dung khiếu nại" />
+                              <TextArea fx:id="txtNoiDung" styleClass="text-area" stylesheets="@../css/form.css" />
+                              <Label stylesheets="@../css/form.css" text="Chọn file đính kèm" />
+                              <Button onAction="#selectFile" style="-fx-background-color: green;" stylesheets="@../css/form.css" text="Chọn file" />
+                              <Label stylesheets="@../css/form.css" text="ID Đơn hàng" />
+                              <TextField fx:id="txtDonHangID" styleClass="text-field" stylesheets="@../css/form.css" />
+                              <Label stylesheets="@../css/form.css" text="Email" />
+                              <TextField fx:id="txtEmail" styleClass="text-field" stylesheets="@../css/form.css" />
+                              <Label stylesheets="@../css/form.css" text="Lựa chọn thắc mắc" />
+                              <ComboBox fx:id="cmbThacMac" styleClass="combo-box" stylesheets="@../css/form.css" />
+                              <Button onAction="#submitKhiieuNai" style="-fx-background-color: orange;" stylesheets="@../css/form.css" text="Gửi khiếu nại" />
+                           </children>
+                        </VBox>
+                     </children>
+                  </AnchorPane>
+               </children>
+            </AnchorPane>
+        </content>
+      </ScrollPane>
+   </center>
+</BorderPane>
