--- a/project-btl-oop-master/src/main/resources/fxml/forgotPassword.fxml
+++ b/project-btl-oop-master/src/main/resources/fxml/forgotPassword.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="500.0" styleClass="backgroundroot" stylesheets="@../css/login.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pj.Controller.ForgotPasswordController">
+<AnchorPane prefHeight="500.0" prefWidth="500.0" styleClass="backgroundroot" stylesheets="@../css/login.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pj.Controller.ForgotPasswordController">
     <children>
         <VBox alignment="TOP_CENTER" layoutX="200.0" layoutY="150.0" prefHeight="200.0" prefWidth="100.0" spacing="15.0" style="-fx-background-radius: 30;" styleClass="background2" stylesheets="@../css/login.css" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="50.0">
             <children>
@@ -27,7 +27,7 @@
                         <Insets left="40.0" right="40.0" top="50.0" />
                     </VBox.margin>
                 </TextField>
-                <Button fx:id="tiepButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="94.0" styleClass="buttonLogin" stylesheets="@../css/login.css" text="Tiếp" textFill="WHITE">
+                <Button fx:id="tiepButton" mnemonicParsing="false" onAction="#onTiep" prefHeight="38.0" prefWidth="94.0" styleClass="buttonLogin" stylesheets="@../css/login.css" text="Tiếp" textFill="WHITE">
                     <font>
                         <Font name="System Bold" size="14.0" />
                     </font>
@@ -35,6 +35,7 @@
                         <Cursor fx:constant="HAND" />
                     </cursor>
                 </Button>
+            <Label fx:id="labell" alignment="CENTER" contentDisplay="CENTER" prefHeight="42.0" prefWidth="228.0" textAlignment="CENTER" textFill="#df0707" />
                 <Hyperlink fx:id="login" onAction="#onDangNhap" text="Đăng nhập">
                     <VBox.margin>
                         <Insets left="185.0" top="50.0" />
