--- a/project-btl-oop-master/src/main/resources/fxml/hoaDon.fxml
+++ b/project-btl-oop-master/src/main/resources/fxml/hoaDon.fxml
@@ -49,6 +49,11 @@
                         <Cursor fx:constant="HAND" />
                     </cursor>
                 </Button>
+            <Button fx:id="btnXuatHoaDon" layoutX="989.0" layoutY="16.0" mnemonicParsing="false" onAction="#onXuatHoaDon" prefHeight="45.0" prefWidth="102.0" styleClass="buttonQL" stylesheets="@../css/quanAo.css" text="Xuất Hóa Đơn">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
             </children>
         </AnchorPane>
     </top>
