--- a/project-btl-oop-master/src/main/resources/fxml/register.fxml
+++ b/project-btl-oop-master/src/main/resources/fxml/register.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="500.0" styleClass="backgroundroot" stylesheets="@../css/login.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pj.Controller.RegisterController">
+<AnchorPane prefHeight="500.0" prefWidth="500.0" styleClass="backgroundroot" stylesheets="@../css/login.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pj.Controller.RegisterController">
     <children>
         <VBox alignment="TOP_CENTER" layoutX="200.0" layoutY="156.0" prefHeight="200.0" prefWidth="100.0" spacing="15.0" style="-fx-background-radius: 30;" styleClass="background2" stylesheets="@../css/login.css" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="50.0">
             <children>
@@ -61,7 +61,7 @@
                         <Cursor fx:constant="HAND" />
                     </cursor>
                 </Button>
-            <Label fx:id="checkUser" textFill="RED" />
+            <Label fx:id="checkUser" contentDisplay="CENTER" prefHeight="146.0" prefWidth="190.0" textAlignment="CENTER" textFill="RED" />
                 <HBox prefHeight="100.0" prefWidth="200.0">
                     <children>
                         <Hyperlink fx:id="login" focusTraversable="false" onAction="#onDangNhap" text="Đăng nhập">
